--- a/manual/resources/korean/_howToUse.html
+++ b/manual/resources/korean/_howToUse.html
@@ -28,7 +28,7 @@
 						<hr>
 						<div class="button-action-group">
 							<span class="button-action font buttonB"></span>
-							<span class="button-action-text">Go to the page you previously looked at</span>
+							<span class="button-action-text">이전에 봤던 페이지로 이동합니다.</span>
 						</div>
 						<hr>
 						<div class="button-action-group">
