--- a/manual/resources/Acholi/theme3_r4.html
+++ b/manual/resources/Acholi/theme3_r4.html
@@ -2,81 +2,79 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>R4原版主题 - TWiLight Menu++说明书</title>
+		<title>crwdns7456:0crwdne7456:0</title>
 		<link rel="stylesheet" href="../assets/css/layout.css">
 		<link rel="stylesheet" href="../assets/css/button-hit.css">
 	</head>
 	<body>
 		<div class="ds-size">
 			<div class="banner">
-				<img src="../assets/images/r4-theme.png">
+				<img src="crwdns7458:0crwdne7458:0">
 			</div>
 			<div class="bottom-screen">
-				<img class="twilightLogo" src="../assets/images/twilight.png">
+				<img class="twilightLogo" src="crwdns7460:0crwdne7460:0">
 				<div class="ds-margin">
-					<div class="section-title">主菜单</div>
+					<div class="section-title">crwdns7462:0crwdne7462:0</div>
 					<div class="section-body">
 						<div class="button-action-group">
 							<span class="button-action font leftRight"></span>
-							<span class="button-action-text">上一个项目/下一个项目</span>
+							crwdns7464:0crwdne7464:0
 						</div>
 						<hr>
 						<div class="button-action-group">
 							<span class="button-action font buttonA"></span>
-							<span class="button-action-text">打开选中文件</span>
+							crwdns7466:0crwdne7466:0
 						</div>
 						<hr>
 						<div class="button-action-group">
 							<span class="button-action font buttonB"></span>
-							<span class="button-action-text">重启TWiLight Menu++</span>
+							crwdns7468:0crwdne7468:0
 						</div>
 						<hr>
 						<div class="button-action-group">
-							<span class="button-action">SELECT<br>& START</span>
-							<span class="button-action-text">进入TWiLight Menu++设置。</span>
+							crwdns7470:0crwdne7470:0
 						</div>
 						<hr>
 						<div class="button-action-group">
-							<span class="button-action"><img src="../assets/images/tap.png"></span>
-							<span class="button-action-text">打开选中文件</span>
+							<span class="button-action"><img src="crwdns7472:0crwdne7472:0"></span>
+							crwdns7474:0crwdne7474:0
 						</div>
 					</div>
 
-					<div class="section-title">文件浏览器</div>
+					<div class="section-title">crwdns7476:0crwdne7476:0</div>
 					<div class="section-body">
 						<div class="button-action-group">
 							<span class="button-action font upDown"></span>
-							<span class="button-action-text">上一个/下一个</span>
+							crwdns7478:0crwdne7478:0
 						</div>
 						<hr>
 						<div class="button-action-group">
 							<span class="button-action font leftRight"></span>
-							<span class="button-action-text">以10列为单位上下滚动</span>
+							crwdns7480:0crwdne7480:0
 						</div>
 						<hr>
 						<div class="button-action-group">
 							<span class="button-action font buttonA"></span>
-							<span class="button-action-text">加载被选中的软件</span>
+							crwdns7482:0crwdne7482:0
 						</div>
 						<hr>
 						<div class="button-action-group">
 							<span class="button-action font buttonB"></span>
-							<span class="button-action-text">回到目录上一层</span>
+							crwdns7484:0crwdne7484:0
 						</div>
 						<hr>
 						<div class="button-action-group">
 							<span class="button-action font buttonX"></span>
-							<span class="button-action-text">在菜单中隐藏此图标</span>
+							crwdns7486:0crwdne7486:0
 						</div>
 						<hr>
 						<div class="button-action-group">
 							<span class="button-action font buttonY"></span>
-							<span class="button-action-text">显示文件信息和游戏设置</span>
+							crwdns7488:0crwdne7488:0
 						</div>
 						<hr>
 						<div class="button-action-group">
-							<span class="button-action">START</span>
-							<span class="button-action-text">返回主菜单。</span>
+							crwdns7490:0crwdne7490:0
 						</div>
 					</div>
 				</div>
