--- a/manual/resources/chinese_s/theme4_acekard.html
+++ b/manual/resources/chinese_s/theme4_acekard.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Wood UI Theme - TWiLight Menu++ Manual</title>
+		<title>Wood内核界面主题 - TWiLight Menu++说明书</title>
 		<link rel="stylesheet" href="../assets/css/layout.css">
 		<link rel="stylesheet" href="../assets/css/button-hit.css">
 	</head>
@@ -14,54 +14,54 @@
 			<div class="bottom-screen">
 				<img class="twilightLogo" src="../assets/images/twilight.png">
 				<div class="ds-margin">
-					<div class="section-title">Button Controls</div>
+					<div class="section-title">操作方法</div>
 					<div class="section-body">
 						<div class="button-action-group">
 							<span class="button-action font upDown"></span>
-							<span class="button-action-text">Previous/Next entry</span>
+							<span class="button-action-text">上一个/下一个</span>
 						</div>
 						<hr>
 						<div class="button-action-group">
 							<span class="button-action font leftRight"></span>
-							<span class="button-action-text">Move Up/Down by 10</span>
+							<span class="button-action-text">以10列为单位上下滚动</span>
 						</div>
 						<hr>
 						<div class="button-action-group">
 							<span class="button-action font buttonA"></span>
-							<span class="button-action-text">Launch highlighted application</span>
+							<span class="button-action-text">加载被选中的软件</span>
 						</div>
 						<hr>
 						<div class="button-action-group">
 							<span class="button-action"><span class="font buttonB"> /</span> <span class="font buttonL"></span></span>
-							<span class="button-action-text">Go up a directory level</span>
+							<span class="button-action-text">回到目录上一层</span>
 						</div>
 						<hr>
 						<div class="button-action-group">
 							<span class="button-action font buttonY"></span>
-							<span class="button-action-text">Show application information and specific settings</span>
+							<span class="button-action-text">显示文件信息和游戏设置</span>
 						</div>
 						<hr>
 						<div class="button-action-group">
 							<span class="button-action">START</span>
-							<span class="button-action-text">Display the Start Menu.</span>
+							<span class="button-action-text">显示START菜单</span>
 						</div>
 						<hr>
 						<div class="button-action-group">
 							<span class="button-action">SELECT</span>
-							<span class="button-action-text">Change the view mode.</span>
+							<span class="button-action-text">改变图标显示方式</span>
 						</div>
 					</div>
 
-					<div class="section-title">Touch Controls</div>
+					<div class="section-title">触摸控制方法</div>
 					<div class="section-body">
 						<div class="button-action-group">
 							<span class="button-action"><img src="../assets/images/up_down.png"></span>
-							<span class="button-action-text">Scroll through the page</span>
+							<span class="button-action-text">滑动页面</span>
 						</div>
 						<hr>
 						<div class="button-action-group">
 							<span class="button-action"><img src="../assets/images/tap.png"></span>
-							<span class="button-action-text">Launch highlighted application</span>
+							<span class="button-action-text">加载被选中的软件</span>
 						</div>
 					</div>
 				</div>
