--- a/manual/resources/korean/settings.html
+++ b/manual/resources/korean/settings.html
@@ -14,7 +14,7 @@
 			<div class="bottom-screen">
 				<img class="twilightLogo" src="../assets/images/twilight.png">
 				<div class="ds-margin">
-					<div class="section-title">File Browser</div>
+					<div class="section-title">파일 탐색기</div>
 					<div class="section-body">
 						<div class="button-action-group">
 							<span class="button-action font upDown"></span>
