--- a/manual/resources/chinese_t/settings.html
+++ b/manual/resources/chinese_t/settings.html
@@ -58,15 +58,15 @@
 
 					<div class="section-title">3<sup>rd</sup> Page -- GBARunner2 Config</div>
 					<div class="section-body">
-						These are settings regarding the Gameboy Advance Hypervisor, GBARunner2. Toggle the mask, border or the darker colors options.
+						These are settings regarding the Gameboy Advance Hypervisor, GBARunner2. Toggle the mask, border or the darker colors options. Toggle the mask, border or the darker colors options.
 					</div>
 
 					<div class="section-title">4<sup>th</sup> Page -- Games & Apps Config</div>
 					<div class="section-body">
-						These are settings regarding launching applications in general. Select whether to use flashcarts or nds-bootstrap, use your LED as read indicators (DSi only), have widescreen enabled (3DS only) and more.
+						These are settings regarding launching applications in general. These are settings regarding launching applications in general. Select whether to use flashcarts or nds-bootstrap, use your LED as read indicators (DSi only), have widescreen enabled (3DS only) and more.
 					</div>
 
-					<div class="section-title">5<sup>th</sup> Page -- Misc. Config</div>
+					<div class="section-title">5<sup>th</sup> Page -- Misc. Config Config</div>
 					<div class="section-body">
 						The options in this page toggles which language to use, whether to automatically boot the last played game, whether to show the splash screens on startup, amongst others.
 					</div>
