--- a/manual/resources/chinese_s/cheats.html
+++ b/manual/resources/chinese_s/cheats.html
@@ -16,8 +16,7 @@
 				<div class="ds-margin">
 					<div class="section-title">Nintendo DS软件</div>
 					<div class="section-body">
-						<p class="small-bottom">对于存放于主机SD卡一侧的nds-bootstrap引导程序，本软件内置金手指选择菜单，您可以在这里开启或关闭指定的作弊码。 作弊码被设置为循环调用格式，并且将通过R4CEE打包保存在<code class="language-plaintext">usrcheats.dat</code>文件中。 我们推荐您使用由DeadSkullzJr提供的金手指数据库。
-链接地址：https://bit.ly/DSJCheats</p>
+						<p class="small-bottom">对于存放于主机SD卡一侧的nds-bootstrap引导程序，本软件内置金手指选择菜单，您可以在这里开启或关闭指定的作弊码。 作弊码被设置为循环调用格式，并且将通过R4CEE打包保存在<code class="language-plaintext">usrcheats.dat</code>文件中。 我们推荐您使用由DeadSkullzJr提供的金手指数据库。 链接地址：https://bit.ly/DSJCheats</p>
 						<hr>
 						<p class="small-top">将金手指文件放在您的SD卡
 <code class="language-plaintext">/_nds/TWiLightMenu/extras</code>位置，
