--- a/manual/resources/chinese_t/_howToUse.html
+++ b/manual/resources/chinese_t/_howToUse.html
@@ -52,7 +52,7 @@
 
 					<div class="section-title">Theme information</div>
 					<div class="section-body">
-						<p>TWiLight Menu++ has 6 different themes you can pick from. These are alternative menus which all have different designs, some of them having completely separate navigational styles.</p>
+						<p>TWiLight Menu++ has 6 different themes you can pick from. These are alternative menus which all have different designs, some of them having completely separate navigational styles. These are alternative menus which all have different designs, some of them having completely separate navigational styles.</p>
 						<div class="grid-container-3">
 							<div class="grid-item">
 								<img src="../assets/images/dsicon.png"><br>
@@ -83,7 +83,7 @@
 
 					<div class="section-title">Game Loaders</div>
 					<div class="section-body">
-						<p>TWiLight Menu++, as the name implies, is just a menu. It doesn't actually launch the ROMs itself. Here's a manual page for each ROM loader we have.</p>
+						<p>TWiLight Menu++, as the name implies, is just a menu. It doesn't actually launch the ROMs itself. Here's a manual page for each ROM loader we have. It doesn't actually launch the ROMs itself. Here's a manual page for each ROM loader we have.</p>
 						<div class="grid-container-2">
 							<div class="grid-item">
 								<img src="../assets/images/ndsbicon.png"><br>
