--- a/manual/resources/chinese_t/gbarunner2.html
+++ b/manual/resources/chinese_t/gbarunner2.html
@@ -43,7 +43,10 @@
 					</div>
 					<div class="section-title">BIOS File</div>
 					<div class="section-body">
-						GBARunner2 requires a dump of the GBA BIOS titled <code class="language-plaintext">bios.bin</code>. This file could be located either at the root of the SD card, <code class="language-plaintext">/gba</code> folder or <code class="language-plaintext">/_gba</code> folder.
+						GBARunner2 requires a dump of the GBA BIOS titled <code class="language-plaintext">bios.bin</code>. This file could be located either at the root of the SD card, <code class="language-plaintext">/gba</code> folder or <code class="language-plaintext">/_gba</code> folder. This file could be located either at the root of the SD card, <code class="language-plaintext">/gba</code> folder or <code class="language-plaintext">/_gba</code> folder.
+						<hr>
+						Make sure your GBA BIOS dump matches with the following CRC32 hash: <code class="language-plaintext">81977335</code>.<br>
+						You can check this by visiting the following website: <b>hash.online-convert.com/crc32-generator</b>
 					</div>
 				</div>
 			</div>
